--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 				<span class="icon icon-bar"></span>
 				<span class="icon icon-bar"></span>
 			</button>
-			<a href="#intro" class="navbar-brand smoothScroll">PICKHACKS</a>
+			<a href="#intro" class="navbar-brand smoothScroll"><img class="img-responsive" src="images/pickhacks.png" />PICKHACKS</a>
 		</div>
 
 		<div class="collapse navbar-collapse">
@@ -277,7 +277,7 @@
 					<div role="tabpanel" class="tab-pane active" id="fday">
 						<!-- program speaker here -->
 						<div class="col-md-2 col-sm-2">
-							<img src="images/program-img1.jpg" class="img-responsive" alt="program">
+							<img src="http://www.nicholscrowder.com.au/img/noprofile_lg.gif" class="img-responsive" alt="program">
 						</div>
 						<div class="col-md-10 col-sm-10">
 							<h6>
@@ -294,7 +294,7 @@
 
 						<!-- program speaker here -->
 						<div class="col-md-2 col-sm-2">
-							<img src="images/program-img2.jpg" class="img-responsive" alt="program">
+							<img src="http://www.nicholscrowder.com.au/img/noprofile_lg.gif" class="img-responsive" alt="program">
 						</div>
 						<div class="col-md-10 col-sm-10">
 							<h6>
@@ -311,7 +311,7 @@
 
 						<!-- program speaker here -->
 						<div class="col-md-2 col-sm-2">
-							<img src="images/program-img3.jpg" class="img-responsive" alt="program">
+							<img src="http://www.nicholscrowder.com.au/img/noprofile_lg.gif" class="img-responsive" alt="program">
 						</div>
 						<div class="col-md-10 col-sm-10">
 							<h6>
@@ -327,7 +327,7 @@
 					<div role="tabpanel" class="tab-pane" id="sday">
 						<!-- program speaker here -->
 						<div class="col-md-2 col-sm-2">
-							<img src="images/program-img4.jpg" class="img-responsive" alt="program">
+							<img src="http://www.nicholscrowder.com.au/img/noprofile_lg.gif" class="img-responsive" alt="program">
 						</div>
 						<div class="col-md-10 col-sm-10">
 							<h6>
@@ -344,7 +344,7 @@
 
 						<!-- program speaker here -->
 						<div class="col-md-2 col-sm-2">
-							<img src="images/program-img5.jpg" class="img-responsive" alt="program">
+							<img src="http://www.nicholscrowder.com.au/img/noprofile_lg.gif" class="img-responsive" alt="program">
 						</div>
 						<div class="col-md-10 col-sm-10">
 							<h6>
@@ -361,7 +361,7 @@
 
 						<!-- program speaker here -->
 						<div class="col-md-2 col-sm-2">
-							<img src="images/program-img6.jpg" class="img-responsive" alt="program">
+							<img src="http://www.nicholscrowder.com.au/img/noprofile_lg.gif" class="img-responsive" alt="program">
 						</div>
 						<div class="col-md-10 col-sm-10">
 							<h6>
@@ -377,7 +377,7 @@
 					<div role="tabpanel" class="tab-pane" id="tday">
 						<!-- program speaker here -->
 						<div class="col-md-2 col-sm-2">
-							<img src="images/program-img7.jpg" class="img-responsive" alt="program">
+							<img src="http://www.nicholscrowder.com.au/img/noprofile_lg.gif" class="img-responsive" alt="program">
 						</div>
 						<div class="col-md-10 col-sm-10">
 							<h6>
@@ -394,7 +394,7 @@
 
 						<!-- program speaker here -->
 						<div class="col-md-2 col-sm-2">
-							<img src="images/program-img8.jpg" class="img-responsive" alt="program">
+							<img src="http://www.nicholscrowder.com.au/img/noprofile_lg.gif" class="img-responsive" alt="program">
 						</div>
 						<div class="col-md-10 col-sm-10">
 							<h6>
@@ -411,7 +411,7 @@
 
 						<!-- program speaker here -->
 						<div class="col-md-2 col-sm-2">
-							<img src="images/program-img9.jpg" class="img-responsive" alt="program">
+							<img src="http://www.nicholscrowder.com.au/img/noprofile_lg.gif" class="img-responsive" alt="program">
 						</div>
 						<div class="col-md-10 col-sm-10">
 							<h6>
@@ -453,16 +453,6 @@
 					<div class="speakers-wrapper">
 						<img src="http://www.nicholscrowder.com.au/img/noprofile_lg.gif" class="img-responsive" alt="speakers">
 							<div class="speakers-thumb">
-								<h3>Luis Ocampo</h3>
-								<h6>Co-Director</h6>
-							</div>
-					</div>
-				</div>
-
-				<div class="wow fadeInUp col-lg-3 col-md-4 col-sm-6 col-12" data-wow-delay="0.6s">
-					<div class="speakers-wrapper">
-						<img src="http://www.nicholscrowder.com.au/img/noprofile_lg.gif" class="img-responsive" alt="speakers">
-							<div class="speakers-thumb">
 								<h3>Christopher Gu</h3>
 								<h6>Co-Director</h6>
 							</div>
@@ -473,8 +463,18 @@
 					<div class="speakers-wrapper">
 						<img src="http://www.nicholscrowder.com.au/img/noprofile_lg.gif" class="img-responsive" alt="speakers">
 							<div class="speakers-thumb">
+								<h3>Luis Ocampo</h3>
+								<h6>Co-Director</h6>
+							</div>
+					</div>
+				</div>
+
+				<div class="wow fadeInUp col-lg-3 col-md-4 col-sm-6 col-12" data-wow-delay="0.6s">
+					<div class="speakers-wrapper">
+						<img src="http://www.nicholscrowder.com.au/img/noprofile_lg.gif" class="img-responsive" alt="speakers">
+							<div class="speakers-thumb">
 								<h3>Allison Chan</h3>
-								<h6>Organizer</h6>
+								<h6>Position</h6>
 							</div>
 					</div>
 				</div>
@@ -484,7 +484,7 @@
 						<img src="http://www.nicholscrowder.com.au/img/noprofile_lg.gif" class="img-responsive" alt="speakers">
 							<div class="speakers-thumb">
 								<h3>Jose Alega</h3>
-								<h6>Organizer</h6>
+								<h6>Position</h6>
 							</div>
 					</div>
 				</div>
@@ -524,7 +524,7 @@
 						<img src="http://www.nicholscrowder.com.au/img/noprofile_lg.gif" class="img-responsive" alt="speakers">
 							<div class="speakers-thumb">
 								<h3>Nicole Goetz</h3>
-								<h6>Position</h6>
+								<h6>Advisor</h6>
 							</div>
 					</div>
 				</div>
