--- a/index.html
+++ b/index.html
@@ -123,15 +123,31 @@
 	<div class="container">
 		<div class="row">
 
-			<div class="wow fadeInUp col-md-6 col-sm-6" data-wow-delay="0.4s">
-				<h3>Flex Your Brain!</h3>
+			<div class="wow fadeInUp col-sm-8 col-sm-offset-2 text-center" style="margin-bottom: 4rem" data-wow-delay="0.4s">
+				<div class="section-title">
+					<h2>Flex Your Brain!</h2>
+				</div>
 				<p>PickHacks is a place for exploration. You will have 48 hours to delve into your curiosities, learn something new, and make something awesome.
 					With world-class mentors and 200+ fellow hackers, you're in for an amazing time. Whether you’re a seasoned hacker or completely new to the world of hacking,
-					we’ll have something for you. If you're ready for an adventure, we'll see you by the campfire! </p>
-			</div>
+					we’ll have something for you. If you're ready for an adventure, we'll see you by the campfire!
+				</p>
+				<div class="wow fadeInUp col-xs-4" data-wow-delay="0.6s">
+					<div class="info" style="margin-right: 30%; background-color: #036084;">
+						<h2>1<br /> Venue</h2>
+					</div>
+				</div>
 
-			<div class="wow fadeInUp col-md-6 col-sm-6" data-wow-delay="0.6s">
-				<img src="images/overview-img.jpg" class="img-responsive" alt="Overview">
+				<div class="wow fadeInUp col-xs-4" data-wow-delay="0.6s">
+					<div class="info" style="margin-left: 15%; margin-right: 15%; background-color: #fed132;">
+						<h2>36<br /> Hours</h2>
+					</div>
+				</div>
+
+				<div class="wow fadeInUp col-xs-4" data-wow-delay="0.6s">
+					<div class="info" style="margin-left: 30%; background-color: #78BE20">
+						<h2>250+<br /> Hackers</h2>
+					</div>
+				</div>
 			</div>
 
 		</div>
@@ -651,15 +667,15 @@
 		<div class="row">
 
 			<div class="col-md-12 col-sm-12">
-				<p class="wow fadeInUp" data-wow-delay="0.6s">Made with love in Rolla, MO</p>
+				<p>Made with love in Rolla, MO</p>
 
 
 
 				<ul class="social-icon">
-					<li><a href="https://www.facebook.com/MSTPickHacks/" class="fa fa-facebook wow fadeInUp" data-wow-delay="1s"></a></li>
-					<li><a href="https://twitter.com/mstpickhacks" class="fa fa-twitter wow fadeInUp" data-wow-delay="1.3s"></a></li>
-					<li><a href="https://www.instagram.com/mstpickhacks/" class="fa fa-instagram wow fadeInUp" data-wow-delay="1.6s"></a></li>
-					<li><a href="mailto:pickhacks@mst.edu" class="fa fa-envelope wow fadeInUp" data-wow-delay="1.9s"></a></li>
+					<li><a href="https://www.facebook.com/MSTPickHacks/" class="fa fa-facebook"></a></li>
+					<li><a href="https://twitter.com/mstpickhacks" class="fa fa-twitter"></a></li>
+					<li><a href="https://www.instagram.com/mstpickhacks/" class="fa fa-instagram"></a></li>
+					<li><a href="mailto:pickhacks@mst.edu" class="fa fa-envelope"></a></li>
 				</ul>
 
 			</div>
