--- a/index.html
+++ b/index.html
@@ -590,23 +590,23 @@
 			<br />
             <div class="wow fadeInUp row" data-wow-delay="0.3s">
 
-               <div class="col-sm-6">
+               <div class="col-sm-6 col-xs-12">
                   <img src="images/logo_centene.svg" class="img-responsive" alt="" />
                </div>
-							 <div class="col-sm-6">
+							 <div class="col-sm-6 col-xs-12">
                   <img src="images/panera-logo.jpg" class="img-responsive" alt="" />
                </div>
             </div>
             <!-- Gold Sponsors-->
 						<br />
             <div class="wow fadeInUp row" data-wow-delay="0.6s">
-							<div class="col-sm-1">
+							<div class="col-sm-1 hidden-xs">
 								 <img src="images/placeholder.svg" class="img-responsive" alt="" />
 							</div>
-							<div class="col-sm-5">
+							<div class="col-sm-5 col-xs-9 col-xs-offset-1 col-sm-offset-0">
 								 <img src="images/logo_tradebot.png" class="img-responsive" alt="" />
 							</div>
-               <div class="col-sm-5">
+               <div class="col-sm-5 col-xs-9 col-xs-offset-1 col-sm-offset-0">
                   <img src="images/logo_mixmax.png" class="img-responsive" alt="" />
                </div>
 
@@ -617,16 +617,16 @@
             <!-- Bronze Sponsors-->
              <div class="wow fadeInUp row bronze" data-wow-delay="0.9s">
 
-               <div class="col-sm-3 emerson">
+               <div class="col-sm-3 col-xs-8 col-xs-offset-3 col-sm-offset-0 emerson">
                   <img src="images/ecorp_blk_pc.jpg" class="img-responsive" alt="" />
                </div>
-               <div class="col-sm-3">
+               <div class="col-sm-3 col-xs-8 col-xs-offset-2 col-sm-offset-0">
                   <img src="images/logo_edwardjones.png" class="img-responsive" alt="" />
                </div>
-               <div class="col-sm-3 mastercard">
+               <div class="col-sm-3 col-xs-8 col-xs-offset-2 col-sm-offset-0 mastercard">
                   <img src="images/mastercard-logo.png" class="img-responsive" alt="" />
                </div>
-							 <div class="col-sm-1">
+							 <div class="col-sm-1 col-xs-4 col-xs-offset-4 col-sm-offset-0 up">
 								 	<img src="images/up_logo.png" class="img-responsive" alt="" />
 							 </div>
 
@@ -637,22 +637,22 @@
 
 						<!-- Sponsors-->
              <div class="wow fadeInUp row" data-wow-delay="0.9s">
-               <div class="col-sm-1">
+               <div class="col-sm-1 hidden-xs">
                   <img src="images/placeholder.svg" class="img-responsive" alt="" />
                </div>
-               <div class="col-sm-2">
+               <div class="col-sm-2 col-xs-6">
                   <img src="images/logo_balsamiq.png" class="img-responsive" alt="" style="margin-top: 23px"/>
                </div>
-               <div class="col-sm-2">
+               <div class="col-sm-2 col-xs-6">
                   <img src="images/wolfram-logo.png" class="img-responsive" alt="" />
                </div>
-               <div class="col-sm-2">
+               <div class="col-sm-2 col-xs-6">
                   <img src="images/sketch-logo-light-transparent@2x.png" class="img-responsive" alt="" style="margin-top: 10px"/>
                </div>
-							 <div class="col-sm-2">
+							 <div class="col-sm-2 col-xs-6">
                   <img src="images/sponsor_techdomains.png" class="img-responsive" alt="" style="width: 75%"/>
                </div>
-               <div class="col-sm-2" style="margin-left: -25px">
+               <div class="col-sm-2 col-xs-6 jet" style="margin-left: -25px">
                   <img src="images/logo_jetbrains.svg" class="img-responsive" alt="" style="margin-top: 0;"/>
                </div>
 
