--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="#intro" class="smoothScroll">Intro</a></li>
-				<li><a href="#overview" class="smoothScroll">Overview</a></li>
+				<li><a href="#overview" class="smoothScroll">About</a></li>
 				<li><a href="#faq" class="smoothScroll">FAQ</a></li>
 				<li><a href="#program" class="smoothScroll">Schedule</a></li>
 				<li><a href="#speakers" class="smoothScroll">Team</a></li>
@@ -584,81 +584,51 @@
 					<!--<p>Lorem ipsum dolor sit amet, maecenas eget vestibulum justo imperdiet.</p>-->
 				</div>
 			</div>
+		</div>
 
-			<!-- Platinum Sponsors-->
-			<br />
-			<br />
-            <div class="wow fadeInUp row" data-wow-delay="0.3s">
-
-               <div class="col-sm-6 col-xs-12">
-                  <img src="images/logo_centene.svg" class="img-responsive" alt="" />
-               </div>
-							 <div class="col-sm-6 col-xs-12">
-                  <img src="images/panera-logo.jpg" class="img-responsive" alt="" />
-               </div>
-            </div>
-            <!-- Gold Sponsors-->
-						<br />
-            <div class="wow fadeInUp row" data-wow-delay="0.6s">
-							<div class="col-sm-1 hidden-xs">
-								 <img src="images/placeholder.svg" class="img-responsive" alt="" />
-							</div>
-							<div class="col-sm-5 col-xs-9 col-xs-offset-1 col-sm-offset-0">
-								 <img src="images/logo_tradebot.png" class="img-responsive" alt="" />
-							</div>
-               <div class="col-sm-5 col-xs-9 col-xs-offset-1 col-sm-offset-0">
-                  <img src="images/logo_mixmax.png" class="img-responsive" alt="" />
-               </div>
-
-            </div>
-
-						<br />
-						<br />
-            <!-- Bronze Sponsors-->
-             <div class="wow fadeInUp row bronze" data-wow-delay="0.9s">
-
-               <div class="col-sm-3 col-xs-8 col-xs-offset-3 col-sm-offset-0 emerson">
-                  <img src="images/ecorp_blk_pc.jpg" class="img-responsive" alt="" />
-               </div>
-               <div class="col-sm-3 col-xs-8 col-xs-offset-2 col-sm-offset-0">
-                  <img src="images/logo_edwardjones.png" class="img-responsive" alt="" />
-               </div>
-               <div class="col-sm-3 col-xs-8 col-xs-offset-2 col-sm-offset-0 mastercard">
-                  <img src="images/mastercard-logo.png" class="img-responsive" alt="" />
-               </div>
-							 <div class="col-sm-1 col-xs-4 col-xs-offset-4 col-sm-offset-0 up">
-								 	<img src="images/up_logo.png" class="img-responsive" alt="" />
-							 </div>
-
-            </div>
-
-						<br />
-						<br />
-
-						<!-- Sponsors-->
-             <div class="wow fadeInUp row" data-wow-delay="0.9s">
-               <div class="col-sm-1 hidden-xs">
-                  <img src="images/placeholder.svg" class="img-responsive" alt="" />
-               </div>
-               <div class="col-sm-2 col-xs-6">
-                  <img src="images/logo_balsamiq.png" class="img-responsive" alt="" style="margin-top: 23px"/>
-               </div>
-               <div class="col-sm-2 col-xs-6">
-                  <img src="images/wolfram-logo.png" class="img-responsive" alt="" />
-               </div>
-               <div class="col-sm-2 col-xs-6">
-                  <img src="images/sketch-logo-light-transparent@2x.png" class="img-responsive" alt="" style="margin-top: 10px"/>
-               </div>
-							 <div class="col-sm-2 col-xs-6">
-                  <img src="images/sponsor_techdomains.png" class="img-responsive" alt="" style="width: 75%"/>
-               </div>
-               <div class="col-sm-2 col-xs-6 jet" style="margin-left: -25px">
-                  <img src="images/logo_jetbrains.svg" class="img-responsive" alt="" style="margin-top: 0;"/>
-               </div>
-
-            </div>
+		<div class="row">
+			<h3>{ Industry Sponsors }</h3>
+			<div class="row platinum">
+				<div class="image-container">
+					<img src="images/logo_centene.svg" />
+				</div>
+				<div class="image-container">
+					<img src="images/panera-logo.jpg" />
+				</div>
+			</div>
+			<div class="row gold">
+				<div class="image-container">
+					<img src="images/sponsor_tradebot.jpg" />
+				</div>
+				<div class="image-container">
+					<img src="images/logo_mixmax.png" />
+				</div>
+			</div>
+			<div class="row silver">
+				<div class="image-container">
+					<img src="images/ecorp_blk_pc.jpg" />
+				</div>
+				<div class="image-container">
+					<img src="images/logo_edwardjones.png" />
+				</div>
+				<div class="image-container master">
+					<img src="images/mastercard-logo.png" />
+				</div>
+				<div class="image-container up">
+					<img src="images/up_logo.png" />
+				</div>
+			</div>
+			<div class="row bronze">
+				<div class="image-container">
+					<img src="images/logo_balsamiq.png" />
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<h3>{ Partners & Supporters }</h3>
 
 		</div>
+
 	</div>
 </section>
 
