--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-
 		<!-- PICKHACKS 2019 TEAM -->
 		<!-- We're looking for staff! Please inquire by emailing msthackathon@mst.edu -->
 		<link rel="author" href="people.txt" />
@@ -40,6 +39,16 @@
 		<!-- Main css -->
 		<link rel="stylesheet" href="css/style.css">
 
+		<!-- Vertical Nav -->
+		<!-- <link rel="stylesheet" href="css/reset.css"> -->
+		<link rel="stylesheet" href="css/vertNav.css"> <!-- Resource style -->
+
+		<script src="js/modernizr.js"></script> <!-- Modernizr -->
+		<script type="text/javascript">
+			var root = document.getElementsByTagName( 'html' )[0]; // '0' to assign the first (and only `HTML` tag)
+			root.setAttribute( 'class', 'no-touch' );
+		</script>
+
 <!-- Google Font -->
 <link href='https://fonts.googleapis.com/css?family=Poppins:400,500,600' rel='stylesheet' type='text/css'>
 
@@ -59,6 +68,19 @@
 <!-- =========================
      NAVIGATION LINKS
 ============================== -->
+<a id="mlh-trust-badge"  href="https://mlh.io/seasons/na-2019/events?utm_source=na-hackathon&utm_medium=TrustBadge&utm_campaign=2019-season&utm_content=white" target="_blank"><img src="https://s3.amazonaws.com/logged-assets/trust-badge/2019/mlh-trust-badge-2019-white.svg" alt="Major League Hacking 2019 Hackathon Season" style="width:100%"></a>
+
+<nav class="cd-vertical-nav">
+	<ul>
+		<li><a href="#section1" class="active"><span class="label">Intro</span></a></li>
+		<li><a href="#section2"><span class="label">Events</span></a></li>
+		<li><a href="#section3"><span class="label">Help</span></a></li>
+		<li><a href="#section4"><span class="label">Share</span></a></li>
+	</ul>
+</nav><!-- .cd-vertical-nav -->
+
+<button class="cd-nav-trigger cd-image-replace">Open navigation<span aria-hidden="true"></span></button>
+
 <div class="navbar navbar-fixed-top custom-navbar" role="navigation">
 	<div class="container">
 
@@ -70,22 +92,6 @@
 				<span class="icon icon-bar"></span>
 			</button>
 			<a href="#intro" class="navbar-brand smoothScroll"><img class="img-responsive" src="images/pickhacks.png" /><i>PICKHACKS</i></a>
-		</div>
-
-		<div class="collapse navbar-collapse">
-
-			<ul class="nav navbar-nav navbar-right">
-				<li><a href="#intro" class="smoothScroll">Intro</a></li>
-				<li><a href="#overview" class="smoothScroll">About</a></li>
-				<li><a href="#faq" class="smoothScroll">FAQ</a></li>
-				<li><a href="#program" class="smoothScroll">Schedule</a></li>
-				<li><a href="#speakers" class="smoothScroll">Team</a></li>
-				<!--<li><a href="#register" class="smoothScroll">Register</a></li>-->
-				<!--<li><a href="#venue" class="smoothScroll">Venue</a></li>-->
-				<li><a href="#sponsors" class="smoothScroll">Sponsors</a></li>
-				<!--<li><a href="#contact" class="smoothScroll">Contact</a></li>-->
-			</ul>
-
 		</div>
 
 	</div>
@@ -106,7 +112,7 @@
 				<h4 class="wow fadeInUp" data-wow-delay="1.1s">Missouri S&T</h4>
 				<h4 class="wow fadeInUp" data-wow-delay="1.1s">March 1 - 3, 2019 </h4>
 				<div class="timer wow fadeInUp" data-wow-delay="1.6s"></div>
-				<a href="#overview" class="btn btn-lg btn-default smoothScroll wow fadeInUp" data-wow-delay="2.1s">SIGN UP FOR UPDATES</a>
+				<a href="http://eepurl.com/dxi4Vb" target="_blank" class="btn btn-lg btn-default smoothScroll wow fadeInUp" data-wow-delay="2.1s">SUBSCRIBE FOR UPDATES</a>
 				<!--<a href="#register" class="btn btn-lg btn-danger smoothScroll wow fadeInUp" data-wow-delay="2.3s">SPONSOR US</a>-->
 			</div>
 
@@ -576,18 +582,18 @@
 <section id="sponsors" class="parallax-section">
 	<div class="container">
 		<div class="row">
+			<h3>{ Industry Sponsors }</h3>
 
-			<div class="wow bounceIn col-md-12 col-sm-12" style="z-index: 1000">
-				<div class="section-title">
-					<h2>2019 SPONSORS</h2>
-					<h3>Interested in sponsoring? Drop us a line at <a href="mailto:pickhacks@mst.edu">pickhacks@mst.edu!</a></h4>
-					<!--<p>Lorem ipsum dolor sit amet, maecenas eget vestibulum justo imperdiet.</p>-->
+			<div class="row">
+
+				<div class="wow bounceIn col-md-12 col-sm-12" style="z-index: 1000">
+					<div class="section-title">
+						<h3>Interested in sponsoring? Drop us a line at <a href="mailto:pickhacks@mst.edu">pickhacks@mst.edu!</a></h4>
+						<!--<p>Lorem ipsum dolor sit amet, maecenas eget vestibulum justo imperdiet.</p>-->
+					</div>
 				</div>
 			</div>
-		</div>
 
-		<div class="row">
-			<h3>{ Industry Sponsors }</h3>
 			<div class="row platinum">
 				<div class="image-container">
 					<img src="images/logo_centene.svg" />
@@ -658,10 +664,6 @@
 </footer>
 
 
-<!-- Back top -->
-<a href="#back-top" class="go-top"><i class="fa fa-angle-up"></i></a>
-
-
 <!-- =========================
      SCRIPTS
 ============================== -->
@@ -673,6 +675,7 @@
 <script src="js/custom.js"></script>
 <script src="js/smoothscroll.js"></script>
 <script src="js/timeCounter.js"></script>
+<script src="js/main.js"></script> <!-- Resource jQuery -->
 
 <script type="text/javascript">
   var Time = "3/01/2019 15:00:00";
