--- a/index.html
+++ b/index.html
@@ -72,10 +72,12 @@
 
 <nav class="cd-vertical-nav">
 	<ul>
-		<li><a href="#section1" class="active"><span class="label">Intro</span></a></li>
-		<li><a href="#section2"><span class="label">Events</span></a></li>
-		<li><a href="#section3"><span class="label">Help</span></a></li>
-		<li><a href="#section4"><span class="label">Share</span></a></li>
+		<li><a href="#intro" class="active"><span class="label">Intro</span></a></li>
+		<li><a href="#overview"><span class="label">About</span></a></li>
+		<li><a href="#faq"><span class="label">FAQ</span></a></li>
+		<li><a href="#program"><span class="label">Schedule</span></a></li>
+		<li><a href="#speakers"><span class="label">Team</span></a></li>
+		<li><a href="#sponsors"><span class="label">Sponsors</span></a></li>
 	</ul>
 </nav><!-- .cd-vertical-nav -->
 
@@ -98,10 +100,11 @@
 ============================== -->
 
 <section id="intro" class="parallax-section">
-	<div class="container">
+	<div class="container" style="margin-top: -15rem">
 		<div class="row">
 
 			<div class="col-md-12 col-sm-12">
+				<img src="images/pickhacks.png" style="width: auto; height: 100px; margin-bottom: -10rem"/>
 				<h1 class="wow fadeInUp" data-wow-delay="0.6s">PICKHACKS</h1>
 				<h4 class="wow fadeInUp" data-wow-delay="1.1s"><a href="https://goo.gl/maps/D8yMcL9eAaN2" class="havener-link">Havener Center</a></h4>
 				<h4 class="wow fadeInUp" data-wow-delay="1.1s">Missouri S&T</h4>
@@ -277,7 +280,7 @@
 	<div class="container">
 		<div class="row">
 
-			<div class="wow fadeInUp col-md-12 col-sm-12" data-wow-delay="0.6s">
+			<div class="wow fadeInUp col-md-12 col-sm-12 text-center" data-wow-delay="0.6s">
 				<div class="section-title">
 					<h2>Schedule of Events</h2>
 					<p>Quisque ut libero sapien. Integer tellus nisl, efficitur sed dolor at, vehicula finibus massa. Sed tincidunt metus sed eleifend suscipit.</p>
@@ -574,7 +577,7 @@
 <!-- =========================
     SPONSORS SECTION
 ============================== -->
-<section id="sponsors" class="parallax-section">
+<section id="sponsors">
 	<div class="container">
 		<div class="row">
 			<h3>{ Industry Sponsors }</h3>
@@ -582,9 +585,8 @@
 			<div class="row">
 
 				<div class="wow bounceIn col-md-12 col-sm-12" style="z-index: 1000">
-					<div class="section-title">
+					<div>
 						<h3>Interested in sponsoring? Drop us a line at <a href="mailto:pickhacks@mst.edu">pickhacks@mst.edu!</a></h4>
-						<!--<p>Lorem ipsum dolor sit amet, maecenas eget vestibulum justo imperdiet.</p>-->
 					</div>
 				</div>
 			</div>
@@ -625,7 +627,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="row">
+		<div class="row supporters">
 			<h3>{ Partners & Supporters }</h3>
 			<div class="row partners">
 				<div class="image-container">
@@ -657,13 +659,13 @@
 			</div>
 			<div class="row partners">
 				<div class="image-container">
+					<img src="images/placeholder.svg" />
+				</div>
+				<div class="image-container">
 					<img src="images/IT.png" />
 				</div>
 				<div class="image-container">
 					<img src="images/coer.png" />
-				</div>
-				<div class="image-container">
-					<img src="images/placeholder.svg" />
 				</div>
 				<div class="image-container">
 					<img src="images/placeholder.svg" />
